# 3dgs-robotics

./: .gitignore  CONTRIBUTING.md  README.md  app.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
configs/: datasets.yaml
docs/: experiments.generated.md  experiments.md  index.html  isaac-sim.md  large-scale-3dgs-real-run.md  launch-kit.html  launch-kit.json  launch-kit.md  live-mapping.md  mcp.md  physical-ai-sim.md  plan_outdoor_gs.md  plan_review_bundle_provenance.md  sim-scenes.json  splat.html  splat_live.html  splat_spark.html  splat_webgpu.html
notebooks/: photos_to_splat_colab.ipynb
scripts/: build_istanbul_3dgs_media.py  build_large_scale_3dgs_fixture.py  build_live_mapping_gif.py  build_live_merge_gif.py  build_localization_gif.py  build_map_quality_gif.py  build_pages_reviews_index.py  build_pages_sample_review_bundle.py  build_robotics_demo_gif.py  build_social_card.py  check_large_scale_3dgs_inputs.py  check_waymo_e2e_prereqs.sh  demo.sh  enhance_demo_sweep_previews.py  generate_launch_kit.py  plot_loop_candidates.py  publish_production_review_bundle.py  robotics_smoke.py  run_active_mapping_demo.py  run_live_mapping_demo.py  run_vggt.py  smoke_route_policy_scenario_ci.py
tests/: test_active_mapping.py  test_build_live_mapping_gif.py  test_build_robotics_demo_gif.py  test_camera_sim_node.py  test_change_detection.py  test_check_large_scale_3dgs_inputs_script.py  test_cli.py  test_click_to_go.py  test_gauge_alignment.py  test_gauge_pose_graph.py  test_gsplat_trainer.py  test_inventory.py  test_isaac_export.py  test_isaac_route.py  test_language_query.py  test_large_scale_3dgs.py  test_large_scale_3dgs_fixture_script.py  test_launch_kit.py  test_live_mapper_node.py  test_live_mapping.py  test_live_merge.py  test_localize.py  test_localizer_node.py  test_map_merge.py  test_mcp_server.py  test_occupancy_grid.py  test_pages_assets.py  test_pages_reviews_index.py  test_patrol.py  test_physical_ai_policy_benchmark.py  test_policy_scenario_ci_review_multi_agent.py  test_policy_scenario_matrix_multi_agent.py  test_policy_scenario_multi_agent.py  test_policy_scenario_multi_agent_aggregate.py  test_policy_scenario_multi_agent_peer_roster.py  test_policy_trace.py  test_policy_trace_emission.py  test_policy_trace_emitter_factory.py  test_preprocess.py  test_publish_production_review_bundle.py  (+15 more)
(+273 files in other folders)
