[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "3dgs-robotics"
version = "0.2.0"
description = "Map, localize, and simulate — 3D Gaussian Splatting for robotics"
authors = [{ name = "rsasaki0109" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = [
    "3d-gaussian-splatting",
    "3dgs",
    "slam",
    "visual-slam",
    "3d-reconstruction",
    "point-cloud",
    "robotics",
    "autonomous-driving",
    "webgl",
    "webgpu",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "opencv-python",
    "Pillow",
    "matplotlib",
    "tqdm",
    "pyyaml",
    "huggingface-hub",
    "gdown",
    "viser",
]

[project.urls]
Homepage = "https://github.com/rsasaki0109/3dgs-robotics"
Documentation = "https://rsasaki0109.github.io/3dgs-robotics/"
Repository = "https://github.com/rsasaki0109/3dgs-robotics"

[project.optional-dependencies]
nerfstudio = ["nerfstudio"]
gsplat = ["gsplat"]
vggt = []
rosbag = ["rosbags"]
app = ["streamlit>=1.30", "plotly>=5.0"]
mcp = ["mcp>=1.2"]
metrics = ["lpips"]
dev = ["pytest", "ruff", "mypy", "rosbags"]

[project.scripts]
3dgs-robotics = "gs_sim2real.cli:main"
3dgs-robotics-node = "gs_sim2real.robotics.ros2_bridge_node:main"
3dgs-robotics-live-mapper = "gs_sim2real.robotics.live_mapper_node:main"
3dgs-robotics-localizer = "gs_sim2real.robotics.localizer_node:main"
3dgs-robotics-camera-sim = "gs_sim2real.robotics.camera_sim_node:main"
3dgs-robotics-mcp = "gs_sim2real.robotics.mcp_server:main"
# legacy aliases (pre-rename)
gs-mapper = "gs_sim2real.cli:main"
gs-sim2real = "gs_sim2real.cli:main"
gs-mapper-robotics-node = "gs_sim2real.robotics.ros2_bridge_node:main"
gs-sim2real-robotics-node = "gs_sim2real.robotics.ros2_bridge_node:main"
gs-mapper-live-mapper = "gs_sim2real.robotics.live_mapper_node:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
